# elalML

./: CMakeLists.txt  README.md
include/elal/ml/node/: IOp.hpp  MathOps.h
include/elal/ml/node/tensor/: BasicInputTensor.h  FloatTensor.h  ITensor.hpp
include/elal/ml/ops/: IOp.hpp  MathOps.h
include/elal/ml/ops/tensor/: Float2dMatrixTensor.h  Float3dMatrixTensor.h  FloatMatTensor.cpp  FloatMatTensor.h  ITensor.hpp
src/nodes/: BasicInputTensor.cpp  FloatTensor.cpp  MathOps.cpp
src/ops/: Float2dMatrixTensor.cpp  Float3dMatrixTensor.cpp  MathOps.cpp
testers/: opsTester.cpp
